--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,8 @@ body {
 }
 
 header {
-   margin: 30px 230px 5px 230px;
+   /* margin: 30px 230px 5px 230px; */
+   padding: 30px 230px 5px 230px;
 } /*ARGH*/
 
 a {
